# quadruped-3rrs-sim

./: .gitignore  README.md
fork/src/object_lifter_description/: CMakeLists.txt  README.md  check_package.py  package.xml
fork/src/object_lifter_description/docs/: shape_check_flow.md
fork/src/object_lifter_description/launch/: display.launch.py  gazebo_ros_gz.launch.py  gazebo_ros_ign.launch.py  teleop.launch.py
fork/src/object_lifter_description/rviz/: object_lifter_preview.rviz
fork/src/object_lifter_description/scripts/: object_lifter_numpad_teleop.py
fork/src/object_lifter_description/urdf/: object_lifter_preview.urdf
fork/src/object_lifter_description/worlds/: object_lifter_empty.sdf
go2_ws/: body_updown.py  go2_int_teleop_key.py  go2_teleop_key.py  pixi.toml  setup.sh
go2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
go2_ws/install/champ/include/champ/: LICENSE  README.md
go2_ws/install/champ/share/champ/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
go2_ws/install/champ_base/lib/champ_base/: message_relay_node  quadruped_controller_node
go2_ws/install/champ_base/share/champ_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
go2_ws/install/champ_msgs/share/champ_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
go2_ws/log/: latest_build
go2_ws/src/unitree_go2_ros2/unitree_go2_sim/: CMakeLists.txt
(+260 files in other folders)
